--- a/index.html
+++ b/index.html
@@ -125,24 +125,12 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-6 mt-2 mb-tg-0 order-2 order-lg-1">
+          <div class="col-lg-6 mt-2 mb-tg-0 order-2 order-lg-1 my-auto">
             <ul class="nav nav-tabs flex-column">
               <li class="nav-item" data-aos="fade-up">
                 <a class="nav-link active show" data-toggle="tab" href="#tab-1">
                   <h4>Traffic flow</h4>
                   <p>Visualization of traffic flow on a given street.</p>
-                </a>
-              </li>
-              <li class="nav-item mt-2" data-aos="fade-up" data-aos-delay="100">
-                <a class="nav-link" data-toggle="tab" href="#tab-2">
-                  <h4>Bus route</h4>
-                  <p>Visualization of the route of a given bus.</p>
-                </a>
-              </li>
-              <li class="nav-item mt-2" data-aos="fade-up" data-aos-delay="200">
-                <a class="nav-link" data-toggle="tab" href="#tab-3">
-                  <h4>Bus speed</h4>
-                  <p>Visualization of the average speed of buses.</p>
                 </a>
               </li>
               <li class="nav-item mt-2" data-aos="fade-up" data-aos-delay="300">
@@ -158,16 +146,6 @@
               <div class="tab-pane active show" id="tab-1">
                 <figure>
                   <img src="assets/img/features-1.jpg" alt="" class="img-fluid">
-                </figure>
-              </div>
-              <div class="tab-pane" id="tab-2">
-                <figure>
-                  <img src="assets/img/features-2.jpg" alt="" class="img-fluid">
-                </figure>
-              </div>
-              <div class="tab-pane" id="tab-3">
-                <figure>
-                  <img src="assets/img/features-3.jpg" alt="" class="img-fluid">
                 </figure>
               </div>
               <div class="tab-pane" id="tab-4">
