--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!-- Icon -->
+  <link rel="icon" href="assets/img/logo.ico">
+
   <!-- =======================================================
   * Template Name: Scaffold - v2.0.0
   * Template URL: https://bootstrapmade.com/scaffold-bootstrap-metro-style-template/
@@ -128,29 +131,62 @@
           <div class="col-lg-6 mt-2 mb-tg-0 order-2 order-lg-1 my-auto">
             <ul class="nav nav-tabs flex-column">
               <li class="nav-item" data-aos="fade-up">
-                <a class="nav-link active show" data-toggle="tab" href="#tab-1">
-                  <h4>Traffic flow</h4>
-                  <p>Visualization of traffic flow on a given street.</p>
+                <a class="nav-link active show" data-toggle="tab" href="#tab-0">
+                  <h4>Traffic statistics</h4>
+                  <p>It allows you to manage the city so that you can know where the traffic is.</p>
+                </a>
+              </li>
+              <li class="nav-item" data-aos="fade-up">
+                <a class="nav-link" data-toggle="tab" href="#tab-1">
+                  <h4>Traffic speed</h4>
+                  <p>Visualization of traffic speed on a given street.</p>
+                </a>
+              </li>
+              <li class="nav-item mt-2" data-aos="fade-up" data-aos-delay="300">
+                <a class="nav-link" data-toggle="tab" href="#tab-2">
+                  <h4>Color map</h4>
+                  <p>Presentation of a color map with the traffic flow of the streets of Porto.</p>
+                </a>
+              </li>
+              <li class="nav-item mt-2" data-aos="fade-up" data-aos-delay="300">
+                <a class="nav-link" data-toggle="tab" href="#tab-3">
+                  <h4>Multiple sources</h4>
+                  <p>Consume data from different sources (speed limits and bus speeds).</p>
                 </a>
               </li>
               <li class="nav-item mt-2" data-aos="fade-up" data-aos-delay="300">
                 <a class="nav-link" data-toggle="tab" href="#tab-4">
-                  <h4>Color map</h4>
-                  <p>Presentation of a color map with the traffic flow of the streets of Porto.</p>
+                  <h4>Feedback</h4>
+                  <p>Possibility of giving feedback at the end of the trip.</p>
                 </a>
               </li>
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in">
             <div class="tab-content">
-              <div class="tab-pane active show" id="tab-1">
+              <div class="tab-pane active show" id="tab-0">
                 <figure>
-                  <img src="assets/img/features-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/stats.jpg" alt="" class="img-fluid">
+                </figure>
+              </div>
+              <div class="tab-pane" id="tab-1">
+                <figure>
+                  <img src="assets/img/speed.jpg" alt="" class="img-fluid">
+                </figure>
+              </div>
+              <div class="tab-pane" id="tab-2">
+                <figure>
+                  <img src="assets/img/map.png" alt="" class="img-fluid">
+                </figure>
+              </div>
+              <div class="tab-pane" id="tab-3">
+                <figure>
+                  <img src="assets/img/data.jpg" alt="" class="img-fluid">
                 </figure>
               </div>
               <div class="tab-pane" id="tab-4">
                 <figure>
-                  <img src="assets/img/features-4-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/feedback.png" alt="" class="img-fluid">
                 </figure>
               </div>
             </div>
