--- a/doc.html
+++ b/doc.html
@@ -73,7 +73,7 @@
               <li class="drop-down"><a href="#">Milestones</a>
                 <ul>
                   <li><a href="https://docs.google.com/document/d/13L9XrrC5gQnzEP9gXsXqNgqZqT_f7Rlz2aJ_TdC_V7A/edit?usp=sharing">M0</a></li>
-                  <li><a href="">M1</a></li>
+                  <li><a href="https://docs.google.com/document/d/1xthDuX46EICflpessaA7YnxTASQEix9WTmfqW-MxNjc/edit?usp=sharing">M1</a></li>
                 </ul>
               </li>
               <li><a href="https://docs.google.com/spreadsheets/d/1_b69Npt0LRZnv0r5pMCbYyelZP4NoX8lY-o6Ff_MTV8/edit?usp=sharing" style="color:darkgreen;">Timesheet</a></li>
@@ -167,7 +167,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="box" data-aos="zoom-in">
               <h3><b>Scenario 1</b></h3>
               <p>
@@ -176,11 +176,19 @@
               <br>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="box" data-aos="zoom-in">
               <h3><b>Scenario 2</b></h3>
               <p>
                 A user takes a bus trip every day to the university. He will be able to choose one of several lines in order to reach his destination. However, when using the BestPath application, he will be able to see the traffic flow and thus infer which line will take least time.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="box" data-aos="zoom-in">
+              <h3><b>Scenario 3</b></h3>
+              <p>
+                A user intends to do a study on congestion on the streets of Porto, for that he will use the BestPath application to obtain this information using the statistics page, thus being able to make a dataset.
               </p>
             </div>
           </div>
@@ -317,7 +325,7 @@
                 <b style="font-size: large;">Scenario</b>
               </div>
               <div class="col-md-6 col-lg-3">
-                <b style="font-size: large;">Notes</b>
+                <b style="font-size: large;">Explanation</b>
               </div>
             </div>
           </div>
@@ -349,7 +357,7 @@
                 <p>Statistics page</p>
               </div>
               <div class="col-md-6 col-lg-6">
-                <p>1. Regard more information about general road congestion</p>
+                <p>1. See more information about general road congestion</p>
                 <p><b>Given</b> I want to know more information about road congestion<br><b>When</b> I see the statistics page on BestPath system<br><b>Then</b> I obtain detailed information about general road congestion</p>
                 <p>2. Make studies about road traffic at Porto</p>
                 <p><b>Given</b> a person with interesting to study the road congestion<br><b>When</b> using the information available on the system<br><b>Then</b> the person can make a dataset</p>
