--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <li class="drop-down"><a href="#">Milestones</a>
                 <ul>
                   <li><a href="https://docs.google.com/document/d/13L9XrrC5gQnzEP9gXsXqNgqZqT_f7Rlz2aJ_TdC_V7A/edit?usp=sharing">M0</a></li>
-                  <li><a href="https://docs.google.com/document/d/1xthDuX46EICflpessaA7YnxTASQEix9WTmfqW-MxNjc/edit?usp=sharing">M1</a></li>
+                  <li><a href="">M1</a></li>
                 </ul>
               </li>
               <li><a href="https://docs.google.com/spreadsheets/d/1_b69Npt0LRZnv0r5pMCbYyelZP4NoX8lY-o6Ff_MTV8/edit?usp=sharing" style="color:darkgreen;">Timesheet</a></li>
