--- a/doc.html
+++ b/doc.html
@@ -193,6 +193,26 @@
             </div>
           </div>
         </div>
+      <br>
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-4">
+            <div class="box" data-aos="zoom-in">
+              <h3><b>Scenario 4</b></h3>
+              <p>
+                A user intends to use the BestPath application to find the best route to work, he will use the web interface that we provide to be able to interact with the web application.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="box" data-aos="zoom-in">
+              <h3><b>Scenario 5</b></h3>
+              <p>
+                A user used our application to find the best way to the university. At the end of his journey he felt the need to give feedback since he thought that the application showed him the best way with great accuracy.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section><!-- End Scenarios Section -->
 
